--- a/input_files/LHC_mass_combination.yaml
+++ b/input_files/LHC_mass_combination.yaml
@@ -5,7 +5,6 @@
 
 global:
   corr_dir:      input_files/correlations/
-  stat_cov_dir:  input_files/statistics/
   n_meas: 15
   n_syst: 25
   name: LHC
@@ -57,7 +56,7 @@ data:
     - label: o
       central: 173.68
       stat_error: 0.20
-  # stat_cov_path: ${global.stat_cov_dir}LHC_stat_cov_15x15.txt
+  # stat_cov_path: ${global.corr_dir}LHC_stat_cov_15x15.txt
 
 syst:
   - name: LHCJES1
