--- a/tutorials/toy/correlations/full_corr.yaml
+++ b/tutorials/toy/correlations/full_corr.yaml
@@ -17,5 +17,5 @@ syst:
   - name: sys1
     shifts: [1.4142, 1.4142]
     type:
-      dependent: full_corr.txt
+      dependent: ones
     epsilon: 0.0
