--- a/tutorials/toy/input_files/decorrelated.yaml
+++ b/tutorials/toy/input_files/decorrelated.yaml
@@ -2,7 +2,7 @@ global:
   name: decorrelated
   n_meas: 2
   n_syst: 1
-  corr_dir: tutorials/toy/input_files/correlations
+  corr_dir: input_files/correlations
 
 data:
   measurements:
@@ -11,10 +11,13 @@ data:
       stat_error: 1.0
     - label: m2
       central: -1.5
-      stat_error: 1.
+      stat_error: 1.0
 
 syst:
   - name: sys1
-    shifts: [0.5, 1.0]
-    type: independent
-    epsilon: 0.0
+    shift:
+      value: [0.5, 1.0]
+      correlation: diagonal
+    error-on-error:
+      value: 0.0
+      type: independent
