--- a/tutorials/toy/input_files/stat_cov.yaml
+++ b/tutorials/toy/input_files/stat_cov.yaml
@@ -2,7 +2,7 @@ global:
   name: stat_cov
   n_meas: 2
   n_syst: 1
-  corr_dir: tutorials/toy/input_files/correlations
+  corr_dir: input_files/correlations
 
 data:
   stat_cov_path: stat_cov.txt
@@ -14,7 +14,9 @@ data:
 
 syst:
   - name: sys1
-    shifts: [0.5, 1.0]
-    type:
-      dependent: ones
-    epsilon: 0.0
+    shift:
+      value: [0.5, 1.0]
+      correlation: ones
+    error-on-error:
+      value: 0.0
+      type: dependent
