Add fictitious measurement studies to top-mass tutorial

--- a/tutorials/top-mass/input_files/LHC_comb.yaml
+++ b/tutorials/top-mass/input_files/LHC_comb.yaml
@@ -53,550 +53,175 @@ data:
 syst:
 - name: LHCJES1
   shift:
-    value:
-    - 0.54
-    - 0.33
-    - 0.38
-    - 0.35
-    - 0.28
-    - 0.4
-    - 0.77
-    - 0.24
-    - 0.69
-    - 0.31
-    - 0.1
-    - 0.16
-    - 0.4
-    - 0.0
-    - 0.11
+    value: [0.54, 0.33, 0.38, 0.35, 0.28, 0.4, 0.77, 0.24, 0.69, 0.31, 0.1, 0.16, 0.4, 0.0, 0.11]
     correlation: LHCJES1.txt
   error-on-error:
     value: 0.0
     type: dependent
 - name: LHCJES2
   shift:
-    value:
-    - 0.3
-    - 0.3
-    - 0.2
-    - 0.41
-    - 0.39
-    - 0.42
-    - 0.54
-    - 0.02
-    - 0.35
-    - 0.17
-    - 0.12
-    - 0.19
-    - 0.21
-    - 0.0
-    - 0.13
+    value: [0.3, 0.3, 0.2, 0.41, 0.39, 0.42, 0.54, 0.02, 0.35, 0.17, 0.12, 0.19, 0.21, 0.0, 0.13]
     correlation: LHCJES2.txt
   error-on-error:
     value: 0.0
     type: dependent
 - name: LHCJES3
   shift:
-    value:
-    - 0.43
-    - 0.07
-    - 0.24
-    - 0.08
-    - 0.05
-    - 0.12
-    - 0.06
-    - 0.01
-    - 0.08
-    - 0.03
-    - 0.01
-    - 0.02
-    - 0.05
-    - 0.0
-    - 0.01
+    value: [0.43, 0.07, 0.24, 0.08, 0.05, 0.12, 0.06, 0.01, 0.08, 0.03, 0.01, 0.02, 0.05, 0.0, 0.01]
     correlation: LHCJES3.txt
   error-on-error:
     value: 0.0
     type: dependent
 - name: LHCbJES
   shift:
-    value:
-    - 0.68
-    - 0.06
-    - 0.62
-    - 0.3
-    - 0.03
-    - 0.34
-    - 0.7
-    - 0.61
-    - 0.49
-    - 0.37
-    - 0.32
-    - 0.29
-    - 0.38
-    - 0.0
-    - 0.0
+    value: [0.68, 0.06, 0.62, 0.3, 0.03, 0.34, 0.7, 0.61, 0.49, 0.37, 0.32, 0.29, 0.38, 0.0, 0.0]
     correlation: LHCbJES.txt
   error-on-error:
     value: 0.0
     type: dependent
 - name: LHCgJES
   shift:
-    value:
-    - 0.03
-    - 0.28
-    - 0.1
-    - 0.02
-    - 0.21
-    - 0.05
-    - 0.0
-    - 0.0
-    - 0.0
-    - 0.07
-    - 0.08
-    - 0.02
-    - 0.0
-    - 0.0
-    - 0.0
+    value: [0.03, 0.28, 0.1, 0.02, 0.21, 0.05, 0.0, 0.0, 0.0, 0.07, 0.08, 0.02, 0.0, 0.0, 0.0]
     correlation: LHCgJES.txt
   error-on-error:
     value: 0.0
     type: dependent
 - name: LHClJES
   shift:
-    value:
-    - 0.02
-    - 0.24
-    - 0.02
-    - 0.01
-    - 0.1
-    - 0.06
-    - 0.0
-    - 0.0
-    - 0.0
-    - 0.04
-    - 0.06
-    - 0.01
-    - 0.07
-    - 0.0
-    - 0.0
+    value: [0.02, 0.24, 0.02, 0.01, 0.1, 0.06, 0.0, 0.0, 0.0, 0.04, 0.06, 0.01, 0.07, 0.0, 0.0]
     correlation: LHClJES.txt
   error-on-error:
     value: 0.0
     type: dependent
 - name: CMSJES
   shift:
-    value:
-    - 0.0
-    - 0.0
-    - 0.0
-    - 0.0
-    - 0.0
-    - 0.0
-    - 0.58
-    - 0.11
-    - 0.58
-    - 0.0
-    - 0.0
-    - 0.0
-    - 0.0
-    - 0.0
-    - 0.0
+    value: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.58, 0.11, 0.58, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]
     correlation: CMSJES.txt
   error-on-error:
     value: 0.0
     type: dependent
 - name: JER
   shift:
-    value:
-    - 0.19
-    - 0.22
-    - 0.01
-    - 0.09
-    - 0.2
-    - 0.1
-    - 0.14
-    - 0.23
-    - 0.15
-    - 0.0
-    - 0.03
-    - 0.02
-    - 0.05
-    - 0.0
-    - 0.05
+    value: [0.19, 0.22, 0.01, 0.09, 0.2, 0.1, 0.14, 0.23, 0.15, 0.0, 0.03, 0.02, 0.05, 0.0, 0.05]
     correlation: JER.txt
   error-on-error:
     value: 0.0
     type: dependent
 - name: leptons
   shift:
-    value:
-    - 0.13
-    - 0.04
-    - 0.0
-    - 0.14
-    - 0.16
-    - 0.01
-    - 0.14
-    - 0.02
-    - 0.0
-    - 0.25
-    - 0.01
-    - 0.0
-    - 0.05
-    - 0.1
-    - 0.24
+    value: [0.13, 0.04, 0.0, 0.14, 0.16, 0.01, 0.14, 0.02, 0.0, 0.25, 0.01, 0.0, 0.05, 0.1, 0.24]
     correlation: leptons.txt
   error-on-error:
     value: 0.0
     type: dependent
 - name: btag
   shift:
-    value:
-    - 0.07
-    - 0.5
-    - 0.16
-    - 0.04
-    - 0.38
-    - 0.1
-    - 0.09
-    - 0.12
-    - 0.06
-    - 0.01
-    - 0.06
-    - 0.02
-    - 0.1
-    - 0.0
-    - 0.02
+    value: [0.07, 0.5, 0.16, 0.04, 0.38, 0.1, 0.09, 0.12, 0.06, 0.01, 0.06, 0.02, 0.1, 0.0, 0.02]
     correlation: btag.txt
   error-on-error:
     value: 0.0
     type: dependent
 - name: ptmiss
   shift:
-    value:
-    - 0.04
-    - 0.15
-    - 0.02
-    - 0.01
-    - 0.05
-    - 0.01
-    - 0.12
-    - 0.06
-    - 0.0
-    - 0.01
-    - 0.04
-    - 0.0
-    - 0.15
-    - 0.0
-    - 0.0
+    value: [0.04, 0.15, 0.02, 0.01, 0.05, 0.01, 0.12, 0.06, 0.0, 0.01, 0.04, 0.0, 0.15, 0.0, 0.0]
     correlation: ptmiss.txt
   error-on-error:
     value: 0.0
     type: dependent
 - name: pileup
   shift:
-    value:
-    - 0.01
-    - 0.02
-    - 0.02
-    - 0.05
-    - 0.15
-    - 0.01
-    - 0.11
-    - 0.07
-    - 0.06
-    - 0.05
-    - 0.06
-    - 0.06
-    - 0.14
-    - 0.07
-    - 0.05
+    value: [0.01, 0.02, 0.02, 0.05, 0.15, 0.01, 0.11, 0.07, 0.06, 0.05, 0.06, 0.06, 0.14, 0.07, 0.05]
     correlation: pileup.txt
   error-on-error:
     value: 0.0
     type: dependent
 - name: trigger
   shift:
-    value:
-    - 0.01
-    - 0.0
-    - 0.01
-    - 0.0
-    - 0.01
-    - 0.08
-    - 0.0
-    - 0.0
-    - 0.24
-    - 0.0
-    - 0.0
-    - 0.01
-    - 0.0
-    - 0.02
-    - 0.0
+    value: [0.01, 0.0, 0.01, 0.0, 0.01, 0.08, 0.0, 0.0, 0.24, 0.0, 0.0, 0.01, 0.0, 0.02, 0.0]
     correlation: trigger.txt
   error-on-error:
     value: 0.0
     type: dependent
 - name: ME
   shift:
-    value:
-    - 0.26
-    - 0.22
-    - 0.3
-    - 0.09
-    - 0.16
-    - 0.18
-    - 0.04
-    - 0.02
-    - 0.19
-    - 0.07
-    - 0.12
-    - 0.16
-    - 0.0
-    - 0.37
-    - 0.42
+    value: [0.26, 0.22, 0.3, 0.09, 0.16, 0.18, 0.04, 0.02, 0.19, 0.07, 0.12, 0.16, 0.0, 0.37, 0.42]
     correlation: ME.txt
   error-on-error:
     value: 0.0
     type: dependent
 - name: LHCrad
   shift:
-    value:
-    - 0.47
-    - 0.32
-    - 0.22
-    - 0.23
-    - 0.08
-    - 0.1
-    - 0.58
-    - 0.3
-    - 0.33
-    - 0.24
-    - 0.09
-    - 0.18
-    - 0.35
-    - 0.74
-    - 0.2
+    value: [0.47, 0.32, 0.22, 0.23, 0.08, 0.1, 0.58, 0.3, 0.33, 0.24, 0.09, 0.18, 0.35, 0.74, 0.2]
     correlation: LHCrad.txt
   error-on-error:
     value: 0.0
     type: dependent
 - name: LHChad
   shift:
-    value:
-    - 0.53
-    - 0.18
-    - 0.5
-    - 0.22
-    - 0.15
-    - 0.64
-    - 0.0
-    - 0.0
-    - 0.0
-    - 0.38
-    - 0.01
-    - 0.04
-    - 0.0
-    - 0.3
-    - 0.54
+    value: [0.53, 0.18, 0.5, 0.22, 0.15, 0.64, 0.0, 0.0, 0.0, 0.38, 0.01, 0.04, 0.0, 0.3, 0.54]
     correlation: LHChad.txt
   error-on-error:
     value: 0.0
     type: dependent
 - name: CMSbHad
   shift:
-    value:
-    - 0.0
-    - 0.0
-    - 0.0
-    - 0.0
-    - 0.0
-    - 0.0
-    - 0.0
-    - 0.0
-    - 0.0
-    - 0.12
-    - 0.16
-    - 0.13
-    - 0.15
-    - 0.0
-    - 0.16
+    value: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.12, 0.16, 0.13, 0.15, 0.0, 0.16]
     correlation: CMSbHad.txt
   error-on-error:
     value: 0.0
     type: dependent
 - name: CR
   shift:
-    value:
-    - 0.14
-    - 0.11
-    - 0.22
-    - 0.03
-    - 0.19
-    - 0.12
-    - 0.13
-    - 0.54
-    - 0.15
-    - 0.13
-    - 0.01
-    - 0.16
-    - 0.05
-    - 0.12
-    - 0.08
+    value: [0.14, 0.11, 0.22, 0.03, 0.19, 0.12, 0.13, 0.54, 0.15, 0.13, 0.01, 0.16, 0.05, 0.12, 0.08]
     correlation: CR.txt
   error-on-error:
     value: 0.0
     type: dependent
 - name: UE
   shift:
-    value:
-    - 0.05
-    - 0.15
-    - 0.08
-    - 0.1
-    - 0.08
-    - 0.12
-    - 0.05
-    - 0.15
-    - 0.2
-    - 0.11
-    - 0.08
-    - 0.14
-    - 0.2
-    - 0.13
-    - 0.0
+    value: [0.05, 0.15, 0.08, 0.1, 0.08, 0.12, 0.05, 0.15, 0.2, 0.11, 0.08, 0.14, 0.2, 0.13, 0.0]
     correlation: UE.txt
   error-on-error:
     value: 0.0
     type: dependent
 - name: PDF
   shift:
-    value:
-    - 0.1
-    - 0.25
-    - 0.09
-    - 0.05
-    - 0.09
-    - 0.09
-    - 0.09
-    - 0.07
-    - 0.06
-    - 0.17
-    - 0.04
-    - 0.03
-    - 0.11
-    - 0.11
-    - 0.04
+    value: [0.1, 0.25, 0.09, 0.05, 0.09, 0.09, 0.09, 0.07, 0.06, 0.17, 0.04, 0.03, 0.11, 0.11, 0.04]
     correlation: PDF.txt
   error-on-error:
     value: 0.0
     type: dependent
 - name: topPT
   shift:
-    value:
-    - 0.0
-    - 0.0
-    - 0.0
-    - 0.0
-    - 0.0
-    - 0.0
-    - 0.0
-    - 0.0
-    - 0.0
-    - 0.51
-    - 0.02
-    - 0.06
-    - 0.0
-    - 0.0
-    - 0.0
+    value: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.51, 0.02, 0.06, 0.0, 0.0, 0.0]
     correlation: topPT.txt
   error-on-error:
     value: 0.0
     type: dependent
 - name: bkgData
   shift:
-    value:
-    - 0.04
-    - 0.11
-    - 0.35
-    - 0.07
-    - 0.05
-    - 0.17
-    - 0.0
-    - 0.0
-    - 0.13
-    - 0.0
-    - 0.0
-    - 0.2
-    - 0.0
-    - 0.0
-    - 0.44
+    value: [0.04, 0.11, 0.35, 0.07, 0.05, 0.17, 0.0, 0.0, 0.13, 0.0, 0.0, 0.2, 0.0, 0.0, 0.44]
     correlation: bkgData.txt
   error-on-error:
     value: 0.0
     type: dependent
 - name: bkgMC
   shift:
-    value:
-    - 0.01
-    - 0.29
-    - 0.0
-    - 0.03
-    - 0.13
-    - 0.0
-    - 0.05
-    - 0.13
-    - 0.0
-    - 0.0
-    - 0.03
-    - 0.0
-    - 0.17
-    - 0.01
-    - 0.0
+    value: [0.01, 0.29, 0.0, 0.03, 0.13, 0.0, 0.05, 0.13, 0.0, 0.0, 0.03, 0.0, 0.17, 0.01, 0.0]
     correlation: bkgMC.txt
   error-on-error:
     value: 0.0
     type: dependent
 - name: method
   shift:
-    value:
-    - 0.09
-    - 0.11
-    - 0.42
-    - 0.05
-    - 0.13
-    - 0.11
-    - 0.4
-    - 0.06
-    - 0.13
-    - 0.0
-    - 0.04
-    - 0.06
-    - 0.39
-    - 0.22
-    - 0.62
+    value: [0.09, 0.11, 0.42, 0.05, 0.13, 0.11, 0.4, 0.06, 0.13, 0.0, 0.04, 0.06, 0.39, 0.22, 0.62]
     correlation: method.txt
   error-on-error:
     value: 0.0
     type: dependent
 - name: other
   shift:
-    value:
-    - 0.07
-    - 0.12
-    - 0.24
-    - 0.02
-    - 0.1
-    - 0.03
-    - 0.0
-    - 0.0
-    - 0.0
-    - 0.03
-    - 0.0
-    - 0.0
-    - 0.25
-    - 0.09
-    - 0.09
+    value: [0.07, 0.12, 0.24, 0.02, 0.1, 0.03, 0.0, 0.0, 0.0, 0.03, 0.0, 0.0, 0.25, 0.09, 0.09]
     correlation: other.txt
   error-on-error:
     value: 0.0
